Fix Piazza links

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -50,7 +50,7 @@
 
 [[main]]
   name = "<i class='ai ai-piazza'></i>"
-  url = "http://www.drps.ed.ac.uk/20-21/dpt/cxmath08077.htm"
+  url = "https://piazza.com"
   weight = 120
   menu_align_right = true
 
