restate office hours

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -101,7 +101,7 @@ directions = ""
 
 # Office hours
 # A list of your office hours. To remove, set to an empty list `[]`.
-office_hours = ["TBD"]
+office_hours = ["David: Tuesdays 10-11, Mine: Wednesdays 12-1"]
 
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
